--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
   },
   "lint-staged": {
     "**/*.js": [
-      "npm run lint:fix",
+      "yarn run lint:fix",
       "git add ."
     ],
     "*.js": "eslint --cache --fix"
