--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "https": "^1.0.0",
     "jade": "~1.11.0",
     "joi": "^17.5.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.5",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.15",
