--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,7 @@
         "ecmaVersion": 13
     },
     "rules": {
-        "no-underscore-dangle": 0
+        "no-underscore-dangle": 0,
+        "no-plusplus": 0
     }
 }
