--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,8 @@
     },
     "rules": {
         "no-underscore-dangle": 0,
-        "no-plusplus": 0
+        "no-plusplus": 0,
+        "no-console": 0
+
     }
 }
